2004-10-11  Wim Taymans  <wim@fluendo.com>

	* gst/playback/gstplaybasebin.c: (setup_source):
	Wrong var used to get g_list_next.

2004-10-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/cdparanoia/gstcdparanoia.c: (cdparanoia_class_init),
	(cdparanoia_get), (cdparanoia_open):
	  Report discid as metadata, add duration.

2004-10-11  Wim Taymans  <wim@fluendo.com>

	* gst/playback/gstplaybasebin.c: (setup_source):
	Cleanup the previous pipeline a little earlier for the
	case that a source element provides raw data.

2004-10-11  Benjamin Otte  <otte@gnome.org>

	* ext/mad/gstid3tag.c: (gst_id3_tag_chain):
	  reset v1 tag offset when there is no v1 tag. Fixes id3demux always
	  consuming the last 128 bytes, even though it was valid mp3 data.

2004-10-10  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* sys/v4l/gstv4lsrc.c: (gst_v4lsrc_palette_to_caps),
	(gst_v4lsrc_getcaps), (gst_v4lsrc_get):
	* sys/v4l/v4l-overlay_calls.c: (gst_v4l_set_overlay):
	Change g_warnings to GST_WARNING_OBJECT and fix colourspace issue

2004-10-10  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* sys/v4l/gstv4lsrc.c: (gst_v4lsrc_src_link), (gst_v4lsrc_getcaps):
	Fix for webcams that support only specific width or height

2004-10-09  Tim-Philipp Müller  <t.i.m@zen.co.uk>

	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/wavenc/gstwavenc.c: (gst_wavenc_stop_file):
	  Fix wrong discont event setup (fixes #154967).

2004-10-09  Sebastien Cote  <sc5@hermes.usherb.ca>

	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/auparse/gstauparse.c: (gst_auparse_chain):
	  Error out on invalid data (fixes #154807).

2004-10-09  Tim-Philipp Müller  <t.i.m@zen.co.uk>

	Reviewed by: Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/dvdread/dvdreadsrc.c: (_read):
	  Make titles > 0 work again (fixes #154834).

2004-10-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst-libs/gst/riff/riff-media.c: